force-app/main/default/objects/Apex_Debug_Log__c/Apex_Debug_Log__c.object-meta.xml
<CustomObject>
    <label>Apex Debug Log</label>
    <nameField>
        <displayFormat>ADL-{0000}</displayFormat>
        <label>Apex Debug Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>