force-app/main/default/objects/Apex_Debug_Log__c/fields/Debug_Message__c.field-meta.xml
<CustomField>
    <fullName>Debug_Message__c</fullName>
    <label>Debug Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>