force-app/main/default/objects/Apex_Debug_Log__c/fields/Debug_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Debug_Stack_Trace__c</fullName>
    <label>Debug Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>