force-app/main/default/objects/Apex_Debug_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Method__c</columns>
    <columns>Log_Level__c</columns>
    <columns>Debug_Message__c</columns>
    <columns>Debug_Stack_Trace__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>